tdf#152493 ucb WebDAV: fix upload using HTTP 1.0 fallback

Fix broken libcurl upload to Vibe 4.0.6 WebDAV server
using HTTP 1.0 fallback.

Regression from commit 023ebf17898db4bca63129f079fd90b5cf76c1a9
"ucb: remove --with-webdav=neon" (Neon had no such upload
problem).

HTTP 1.0 fallback found by Pál Zoltán Kochis.
Fallback for CURLE_UNSUPPORTED_PROTOCOL
suggested by Michael Stahl. Thanks for their and
Attila Bakos' help.

Michael Stahl's comment: "'HTTP/0.9' in the [curl] error
message is very misleading: it simply means that a header
was expected but there was no header, so what is received
is interpreted as body.

Note: the HTTP/1.0 works because it does not use the
'Expect: 100-continue' so there should be no intermediate
100 Continue response from the server at all - instead
libcurl directly sends the XML document for the PROPFIND
and the server sends the response, and the problem does
not occur."

Co-authored-by: Michael Stahl <michael.stahl@allotropia.de>

Change-Id: I8bd79154de14b6425e0324f4d8f6e64512c08264
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146067
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 30ca48f4dc0e65a3798e6b21574bc80f6d4953fa)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146315
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>